# pid-workspace

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  Use_PID.cmake  licence.txt  pid  pid.bat
CMakeModules/: Findneobotix-mpo700-robot.cmake  Package_Definition.cmake  Package_Finding_Functions.cmake
cmake/: Configuration_Definition.cmake  Environment_Definition.cmake  External_Definition.cmake  Framework_Definition.cmake  PID_Set_Modules_Path.cmake  PID_Set_Policies.cmake  Package_Definition.cmake  Plugin_Definition.cmake  Wrapper_Definition.cmake
cmake/.docs/: .gitignore  cmake.py  conf.py  index.rst
cmake/api/: PID_Binaries_Registry_Functions.cmake  PID_Continuous_Integration_Functions.cmake  PID_Contribution_Space_Functions.cmake  PID_Deployment_Functions.cmake  PID_Documentation_Management_Functions.cmake  PID_Environment_API_Internal_Functions.cmake  PID_External_Use_Internal_Functions.cmake  PID_Finding_Functions.cmake  PID_Framework_API_Internal_Functions.cmake  PID_Git_Functions.cmake  PID_Meta_Information_Management_Functions.cmake  PID_Package_API_Internal_Functions.cmake  PID_Package_Build_Targets_Management_Functions.cmake  PID_Package_Cache_Management_Functions.cmake  PID_Package_Coding_Support.cmake  PID_Package_Configuration_Functions.cmake  PID_Platform_Management_Functions.cmake  PID_Plugins_Management.cmake  PID_Profiles_Functions.cmake  PID_Progress_Management_Functions.cmake  PID_Static_Site_Management_Functions.cmake  PID_Utils_Functions.cmake  PID_Version_Management_Functions.cmake  PID_Workspace_Internal_Functions.cmake  PID_Wrapper_API_Internal_Functions.cmake
cmake/commands/: Build_PID_Environment.cmake  Build_PID_Framework.cmake  Build_PID_Package_Dependencies.cmake  Build_PID_Package_Site.cmake  Build_PID_Packages.cmake  Build_PID_Site.cmake  Build_PID_Wrapper.cmake  Check_PID_Package_Branch.cmake  Check_PID_Package_Modification.cmake  Check_PID_Package_Official_Repository.cmake  Clear_PID_Package.cmake  Clear_PID_Package_Install.cmake  Configure_PID_Environment.cmake  Connect_PID_Deployment_Unit.cmake  Create_PID_Deployment_Unit.cmake  Deploy_PID_Deployment_Unit.cmake  Deprecate_PID_Package_Versions.cmake  Eval_PID_System_Configuration.cmake  Format_PID_Package_Sources.cmake  Generate_PID_Coverage.cmake  Hard_Clean_PID_Package.cmake  Install_PID_Package.cmake  Install_PID_Python_Script.cmake  Install_PID_System_Configuration.cmake  Integrate_PID_Package.cmake  Licensing_PID_Package_Files.cmake  Listing_PID_Package_Dependencies.cmake  Listing_PID_Versions.cmake  Manage_PID_Contribution_Spaces.cmake  Manage_PID_Profiles.cmake  Memorizing_PID_Version.cmake  Memorizing_PID_Wrapper_Version.cmake  Patch_PID_Package.cmake  Print_PID_Workspace_Info.cmake  Print_Workspace_Man.cmake  Print_Workspace_Path.cmake  Rebuild_PID_Packages.cmake  Reference_PID_Package.cmake  Referencing_PID_Deployment_Unit.cmake  Register_PID_Deployment_Unit.cmake  (+10 more)
cmake/docs/: PID_Tutorial.tex
cmake/find/: Findpid-rpath.cmake
cmake/patterns/: PID_version.cmake.in
cmake/system/: Configuration_Definition.cmake  Environment_Definition.cmake  External_Definition.cmake  Framework_Definition.cmake  Package_Definition.cmake  Wrapper_Definition.cmake
configurations/boost/: FindBoost.cmake  check_boost.cmake  find_boost.cmake  install_boost.cmake  installable_boost.cmake
configurations/boost/test_boost/: CMakeLists.txt  FindBoost.cmake  boost_config_vars.cmake.in
configurations/bz2/: check_bz2.cmake  find_bz2.cmake  install_bz2.cmake  installable_bz2.cmake
configurations/crypt/: check_crypt.cmake  find_crypt.cmake  installable_crypt.cmake
configurations/cuda/: check_cuda.cmake  find_cuda.cmake  install_cuda.cmake  installable_cuda.cmake
configurations/cudnn/: check_cudnn.cmake  find_cudnn.cmake  installable_cudnn.cmake
configurations/curl/: check_curl.cmake  find_curl.cmake  install_curl.cmake  installable_curl.cmake
configurations/doubleconversion/: check_doubleconversion.cmake  find_doubleconversion.cmake  install_doubleconversion.cmake  installable_doubleconversion.cmake
configurations/expat/: check_expat.cmake  find_expat.cmake  install_expat.cmake  installable_expat.cmake
configurations/f2c/: check_f2c.cmake  find_f2c.cmake  install_f2c.cmake  installable_f2c.cmake
configurations/flann/: check_flann.cmake  find_flann.cmake  install_flann.cmake  installable_flann.cmake
configurations/fontconfig/: check_fontconfig.cmake  find_fontconfig.cmake  install_fontconfig.cmake  installable_fontconfig.cmake
configurations/fortran/: check_fortran.cmake  find_fortran.cmake  installable_fortran.cmake
configurations/freetype2/: check_freetype2.cmake  find_freetype2.cmake  install_freetype2.cmake  installable_freetype2.cmake
configurations/freetype2/test_freetype/: CMakeLists.txt  FindFreetype.cmake  freetype_config_vars.cmake.in
configurations/glew/: check_glew.cmake  find_glew.cmake  install_glew.cmake  installable_glew.cmake
configurations/glibs/: check_glibs.cmake  find_glibs.cmake  install_glibs.cmake  installable_glibs.cmake
configurations/google_libs/: check_google_libs.cmake  find_google_libs.cmake  install_google_libs.cmake  installable_google_libs.cmake
configurations/gtk/: check_gtk.cmake  find_gtk.cmake  install_gtk.cmake  installable_gtk.cmake
configurations/hdf5/test_hdf5/: CMakeLists.txt  FindHDF5.cmake  hdf5_config_vars.cmake.in
configurations/openmp/test_openmp/: CMakeLists.txt  FindOpenMP.cmake  openmp_config_vars.cmake.in
configurations/openmpi/test_mpi/: CMakeLists.txt  FindMPI.cmake  openmpi_config_vars.cmake.in
licenses/: CeCILL-B_V_1.license  CeCILL-C_V_1.license  CeCILL_V_2_1.license  FreeBSD.license  GNUGPL_V_3.license  GNULGPL_V_3.license
patterns/package/: CMakeLists.txt
patterns/package/config/: license.txt
patterns/package/share/: CMakeLists.txt  FindPackage.cmake.in  UsePackageVersion.cmake.in
patterns/package/test/: CMakeLists.txt
share/: bash_completions.sh  pid.sh  zsh_completions.sh
share/patterns/package/apps/: CMakeLists.txt
share/patterns/package/src/: CMakeLists.txt
(+1210 files in other folders)
